src/parser/snapshots/crochet__parser__tests__async_await-2.snap
---
source: src/parser/mod.rs
expression: "parse(\"let foo = async () => { await 10 }\")"
---
Program {
    body: [
        Decl {
            span: 0..34,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "foo",
                    },
                    type_ann: None,
                },
            ),
            value: Lambda(
                Lambda {
                    span: 10..34,
                    args: [],
                    body: Await(
                        Await {
                            span: 24..32,
                            expr: Lit(
                                Num(
                                    Num {
                                        span: 30..32,
                                        value: "10",
                                    },
                                ),
                            ),
                        },
                    ),
                    is_async: true,
                    type_params: None,
                    return_type: None,
                },
            ),
        },
    ],
}
