src/parser/snapshots/crochet__parser__tests__async_await-3.snap
---
source: src/parser/mod.rs
expression: "parse(\"let foo = async () => await a + await b\")"
---
Program {
    body: [
        Decl {
            span: 0..39,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "foo",
                    },
                    type_ann: None,
                },
            ),
            value: Lambda(
                Lambda {
                    span: 10..39,
                    args: [],
                    body: Op(
                        Op {
                            span: 22..39,
                            op: Add,
                            left: Await(
                                Await {
                                    span: 22..29,
                                    expr: Ident(
                                        Ident {
                                            span: 28..29,
                                            name: "a",
                                        },
                                    ),
                                },
                            ),
                            right: Await(
                                Await {
                                    span: 32..39,
                                    expr: Ident(
                                        Ident {
                                            span: 38..39,
                                            name: "b",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    is_async: true,
                    return_type: None,
                },
            ),
        },
    ],
}
