src/parser/snapshots/crochet__parser__tests__async_await-4.snap
---
source: src/parser/mod.rs
expression: "parse(\"let foo = async () => await bar()\")"
---
Program {
    body: [
        VarDecl {
            span: 0..33,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "foo",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Lambda(
                    Lambda {
                        span: 10..33,
                        params: [],
                        body: Await(
                            Await {
                                span: 22..33,
                                expr: App(
                                    App {
                                        span: 28..33,
                                        lam: Ident(
                                            Ident {
                                                span: 28..31,
                                                name: "bar",
                                            },
                                        ),
                                        args: [],
                                    },
                                ),
                            },
                        ),
                        is_async: true,
                        return_type: None,
                    },
                ),
            ),
            declare: false,
        },
    ],
}
