src/parser/snapshots/crochet__parser__tests__blocks-3.snap
---
source: src/parser/mod.rs
expression: "parse(\"{let x = 5; let y = 10; x + y}\")"
---
Program {
    body: [
        Expr {
            span: 0..30,
            expr: Let(
                Let {
                    span: 5..29,
                    pattern: Ident(
                        BindingIdent {
                            span: 5..6,
                            id: Ident {
                                span: 5..6,
                                name: "x",
                            },
                            type_ann: None,
                        },
                    ),
                    value: Lit(
                        Num(
                            Num {
                                span: 9..10,
                                value: "5",
                            },
                        ),
                    ),
                    body: Let(
                        Let {
                            span: 16..29,
                            pattern: Ident(
                                BindingIdent {
                                    span: 16..17,
                                    id: Ident {
                                        span: 16..17,
                                        name: "y",
                                    },
                                    type_ann: None,
                                },
                            ),
                            value: Lit(
                                Num(
                                    Num {
                                        span: 20..22,
                                        value: "10",
                                    },
                                ),
                            ),
                            body: Op(
                                Op {
                                    span: 24..29,
                                    op: Add,
                                    left: Ident(
                                        Ident {
                                            span: 24..25,
                                            name: "x",
                                        },
                                    ),
                                    right: Ident(
                                        Ident {
                                            span: 28..29,
                                            name: "y",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    ],
}
