src/parser/snapshots/crochet__parser__tests__declarations-3.snap
---
source: src/parser/mod.rs
expression: "parse(\"let foo = let x = 5 in x\")"
---
Program {
    body: [
        Decl {
            span: 0..24,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "foo",
                    },
                    type_ann: None,
                },
            ),
            value: Let(
                Let {
                    span: 10..24,
                    pattern: Ident(
                        BindingIdent {
                            span: 14..15,
                            id: Ident {
                                span: 14..15,
                                name: "x",
                            },
                            type_ann: None,
                        },
                    ),
                    value: Lit(
                        Num(
                            Num {
                                span: 18..19,
                                value: "5",
                            },
                        ),
                    ),
                    body: Ident(
                        Ident {
                            span: 23..24,
                            name: "x",
                        },
                    ),
                },
            ),
        },
    ],
}
